fixed the inout search size on small screen

--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,12 +1,3 @@
-input[type=text], select {
-  width: 50%;
-  padding: 14px 20px;
-  margin-left: 290px;
-  display: inline-block;
-  border: 1px solid #b3a9a9;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
 
 input[type=submit] {
   background-color: #4CAF50;
@@ -41,6 +32,9 @@ p {
   margin-bottom: 5px;
   margin-left: 80%;
 }
+
+
+
 
 .listImage {
   background-image: url("https://i.postimg.cc/j22QP8Y8/library.jpg");
@@ -79,16 +73,31 @@ p {
 
 
 #bookSearchButton {
-  margin-right:50px;
+  /* margin-right:50px; */
+  flex: 1;
   background-color: #B92E10;
   color: white;
   border: 2px solid #555555;
   border-radius: 8px;
   -webkit-transition-duration: 0.4s;
+  
 }
 
 
 #bookSearchButton:hover {
   background-color: royalblue;
   color: white;
+}
+
+.box { 
+  margin: 20px auto;
+  width: 100%;
+  /* max-width: 150px; */
+  height: 40px; 
+  text-align: center; 
+}
+
+#search{
+  width: 40%;
+  padding: 14px 20px;
 }
